2017-03-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Added Vagrantfile for FreeBSD 10.3 and fixed build and test suite to
	  work with it.

2017-03-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Made tests work with Ruby 1.8.7 and FUSE 2.8 again (issue #49).
	* Added Vagrant test runner, initially running some Ubuntus and
	  CentOSes.

2017-02-04  Martin Pärtel <martin dot partel at gmail dot com>

	* Deprecated -n as an alias to --no-allow-other (issue #48).

2017-01-29  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed option parsing failure when source dir has a comma (issue #47).
	* Released 1.13.6.

2016-10-30  Martin Pärtel <martin dot partel at gmail dot com>

	* Removed ./configure --enable-debug, which has done nothing for some
	  time.

2016-10-29  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed compilation of tests on some non-x86 platforms.
	* Removed extra debug/optimization CFLAGS. Defaults to -g -O2.
	* Released 1.13.5.

2016-10-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed #41 (directory handle reuse).
	* Released 1.13.4

2016-10-02  Martin Pärtel <martin dot partel at gmail dot com>

	* Require FUSE 2.9 at compile-time.
	* Also compile with FUSE 2.8, but without support for lock forwarding.
	* Released 1.13.3

2016-09-25  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix bug in readdir() introduced with 1.13.1. This fixes a bug when
	  a bindfs mount is exported over NFS (issue #39).
	* Released 1.13.2

2016-07-31  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --enable-ioctl to address issue #37.
	* Added --enable-lock-forwarding to address issue #36.

2016-05-03  Martin Pärtel <martin dot partel at gmail dot com>

	* @chenhaiq added --uid-offset and --gid-offset (PR #31). Thanks!

2016-02-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed an issue that some users had with reading large
	  directories (#28). Thanks to reporters!