@@ -277,6 +277,10 @@ only if deleting the target succeeded).  The default is \fBsymlink-only\fP.
 Note that deleting files inside symlinked directories is always possible with
 all settings, including \fBdeny\fP, unless something else protects those files.
 
+.TP
+.B \-\-block\-devices\-as\-files, \-o block\-devices\-as\-files
+Shows block devices as regular files.
+
 
 .SH MISCELLANEOUS OPTIONS
 
