@@ -1,3 +1,7 @@
+2017-04-19  Martin Pärtel <martin dot partel at gmail dot com>
+
+	* Added --block-devices-as-files (issue #53).
+
 2017-03-14  Martin Pärtel <martin dot partel at gmail dot com>
 
 	* Added Vagrantfile for FreeBSD 10.3 and fixed build and test suite to
